tests/reference/asr-dim_assgn_test-4df3c08.stderr
semantic error: Dimensions cannot be specified twice
 --> tests/errors/dim_assgn_test.f90:2:19
  |
2 | integer, private, dimension(2,2) :: a(2,2)
  |                   ^^^^^^^^^^^^^^    ^^^^^^ dimensions specified at both places
